<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ctr_bg"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/tv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/loading"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="4dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="1076dp"
                android:layout_height="254dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/loading"
                android:src="@drawable/ic_baseline_bookmark_24_saved"
                app:layout_constraintEnd_toEndOf="@+id/tv_image"
                app:layout_constraintStart_toStartOf="@+id/tv_image"
                app:layout_constraintTop_toTopOf="@+id/tv_image" />

            <ImageView
                android:id="@+id/tv_image"
                android:layout_width="165dp"
                android:layout_height="221dp"
                android:contentDescription="@string/loading"
                android:src="@color/black"
                android:translationZ="20dp"
                app:layout_collapseMode="pin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.114"
                tools:src="@color/teal_200" />

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/tv_movieRatingCircle"
                android:layout_width="45dp"
                android:layout_height="84dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:translationZ="12dp"
                app:cpb_background_progressbar_color="#f48fb1"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_progress="8"
                app:cpb_progress_direction="to_right"
                app:cpb_progress_max="10"
                app:cpb_progressbar_color="#c2185b"
                app:cpb_round_border="false"
                app:layout_constraintStart_toStartOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_image" />

            <TextView
                android:id="@+id/tv_userScore"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/user_score"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movieRatingCircle"
                app:layout_constraintEnd_toEndOf="@+id/tv_image"
                app:layout_constraintStart_toEndOf="@+id/tv_movieRatingCircle"
                app:layout_constraintTop_toTopOf="@+id/tv_movieRatingCircle"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_movieRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movieRatingCircle"
                app:layout_constraintEnd_toEndOf="@+id/tv_movieRatingCircle"
                app:layout_constraintStart_toStartOf="@+id/tv_movieRatingCircle"
                app:layout_constraintTop_toTopOf="@+id/tv_movieRatingCircle"
                tools:text="25%" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_image"
                app:layout_constraintStart_toStartOf="@+id/tv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_image"
                tools:text="12-12-2020" />


            <TextView
                android:id="@+id/tv_explainDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release"
                tools:text="@string/about" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_explainDetail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_explainDetail"
                app:layout_constraintTop_toBottomOf="@+id/tv_explainDetail"
                tools:text="@string/about" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:elevation="100dp"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_about"
                tools:layout_editor_absoluteX="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FFC107"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/loading"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/ic_baseline_bookmark_24"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
