<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_movie"
        android:icon="@drawable/ic_main_black"
        android:title="@string/app_name"/>

    <item android:id="@+id/nav_fav"
        android:icon="@drawable/ic_main_fav_black"
        android:title="@string/bottom_nav_fav"/>
</menu>